# pretix-secuconnect

./: .gitlab-ci.yml  .update-locales.sh  MANIFEST.in  Makefile  README.rst  api_test.py  pretixplugin.toml  pyproject.toml  setup.cfg
.github/workflows/: style.yml  tests.yml
pretix_secuconnect/: api_client.py  apps.py  payment.py  signals.py  urls.py  views.py
pretix_secuconnect/locale/: django.pot
pretix_secuconnect/locale/de/LC_MESSAGES/: django.po
pretix_secuconnect/templates/pretix_secuconnect/: checkout_payment_confirm.html  checkout_payment_form.html  control.html  pending.html
