[project]
name = "pretix-secuconnect"
dynamic = ["version"]
description = "Accept payments through secuconnect."
readme = "README.rst"
license = {text = "Apache"}
keywords = ["pretix"]
authors = [
    {name = "pretix team", email = "support@pretix.eu"},
]
maintainers = [
    {name = "pretix team", email = "support@pretix.eu"},
]

dependencies = [
]

[project.entry-points."pretix.plugin"]
pretix_secuconnect = "pretix_secuconnect:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "https://github.com/pretix/pretix-secuconnect"
repository = "https://github.com/pretix/pretix-secuconnect"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_secuconnect.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false
